# yap-wordpress

./: README.md  pyproject.toml
src/lampsible/: __init__.py  arg_validator.py  cli.py  constants.py  helpers.py  lampsible.py
src/lampsible/project/: apache.yml  drupal.yml  get-ansible-facts.yml  joomla.yml  lamp-stack.yml  laravel.yml  mysql.yml  php.yml  wordpress.yml
src/lampsible/project/roles/domain-for-wordpress/tasks/: main.yml
src/lampsible/project/roles/mysql/tasks/: main.yml
src/lampsible/project/roles/ssl-certbot/tasks/: main.yml
src/lampsible/project/roles/wordpress-cli/tasks/: main.yml
src/lampsible/project/roles/wordpress/tasks/: main.yml
test/: test_lampsible.py
