[build-system]
requires = [
    "setuptools>=69.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "lampsible"
version = "2.0.1"
authors = [
    {name="Brian St. Hilaire", email="brian.st-hilaire@sanctus-tech.com"}
]
description = "Deploy and set up LAMP stacks with Ansible"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core>=2.18",
    "ansible-runner>=2.4",
    "ansible-directory-helper>=0.2.1",
    "requests>=2.32.3",
    "fqdn",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Ansible",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
lampsible = "lampsible:cli.main"

[project.urls]
Homepage = "https://github.com/saint-hilaire/lampsible"
Issues = "https://github.com/saint-hilaire/lampsible/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
